--- a/src/api/pyproject.toml
+++ b/src/api/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "fastapi>=0.122.0",
+    "dotenv>=0.9.9",
+    "fastapi[standard]>=0.122.0",
+    "jwt>=1.4.0",
     "sqlmodel>=0.0.27",
 ]
