--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "dotenv>=0.9.9",
     "fastapi>=0.122.0",
+    "jwt>=1.4.0",
     "sqlmodel>=0.0.27",
     "tmdbsimple",
 ]
