--- a/src/api/pyproject.toml
+++ b/src/api/pyproject.toml
@@ -7,6 +7,6 @@ requires-python = ">=3.13"
 dependencies = [
     "dotenv>=0.9.9",
     "fastapi[standard]>=0.122.0",
-    "jwt>=1.4.0",
+    "pyjwt>=2.10.1",
     "sqlmodel>=0.0.27",
 ]
