--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -22,4 +22,4 @@ WORKDIR /app
 RUN uv sync --locked
 # Presuming there is a `my_app` command provided by the project
 RUN uv run dummy.py
-CMD ["uv", "run", "fastapi","dev","api.py","--host","0.0.0.0","--port","8000"]
+CMD ["uv", "run", "fastapi","dev","src/api.py","--host","0.0.0.0","--port","8000"]
