--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,10 +29,14 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-three/drei": "9.105.6",
+    "@react-three/fiber": "8.16.8",
+    "@types/d3-scale": "^4.0.9",
     "@types/react": "^19.2.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "*",
     "cmdk": "^1.1.1",
+    "d3-scale": "^4.0.2",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.487.0",
@@ -46,6 +50,7 @@
     "recharts": "^2.15.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "*",
+    "three": "0.160.0",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
